--- a/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="cfar-contract-dialog-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
+<div class="cfar-offer-dialog-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
     <p fxFlex="100">This layover is triggered once a User has added CFAR to the booking. It gives more information about the CFAR Offer and can enable the User to choose between different coverage options.</p>
 
@@ -6,7 +6,7 @@
 
         <mat-tab label="Overview">
             <div class="p-16">
-                <button mat-flat-button color="primary" (click)="onOpenCfarContractDialog()">Open CFAR Contract
+                <button mat-flat-button color="primary" (click)="onOpenCfarOfferDialog()">Open CFAR Offer
                     dialog</button>
             </div>
         </mat-tab>
