--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -26,8 +26,8 @@
 
     hopper-cfar-exercise-dialog {
         .mat-dialog-title {
-            background-color: map-get($accent-palette, 800);
-            color: map-get($accent-palette, "800-contrast");
+            background-color: map-get($accent-palette, 900);
+            color: map-get($accent-palette, "900-contrast");
             margin: 0px;
         
             .big-icon {
@@ -37,7 +37,11 @@
         }
 
         .mat-dialog-content {
-            background-color: map-get($bg-palette, background);
+            @if($is-dark) {
+                background-color: rgb(52,52,52);
+            } @else {
+                background-color: rgb(255,255,255);
+            }
 
             .title {
                 color: map-get($primary-palette, default);
@@ -74,7 +78,11 @@
         }
 
         .mat-dialog-actions {
-            background-color: map-get($bg-palette, background);
+            @if($is-dark) {
+                background-color: rgb(52,52,52);
+            } @else {
+                background-color: rgb(255,255,255);
+            }
 
             .mat-button-base+.mat-button-base,
             .mat-mdc-button-base+.mat-mdc-button-base {
