--- a/projects/cloud-airlines-angular-sdk/src/styles/theme.scss
+++ b/projects/cloud-airlines-angular-sdk/src/styles/theme.scss
@@ -4,14 +4,14 @@
 
 // Import component mixins here to enable theming for them
 @import "../components/cfar-offer-banner/cfar-offer-banner.component.scss";
-@import "../components/cfar-contract-dialog/cfar-contract-dialog.component.scss";
+@import "../components/cfar-offer-dialog/cfar-offer-dialog.component.scss";
 @import "../components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss";
 @import "../components/event-button/event-button.component.scss";
 
 // Define a mixin for easier access
 @mixin custom-components-theme($theme) {
   @include cfar-offer-banner-theme($theme);
-  @include cfar-contract-dialog-theme($theme);
+  @include cfar-offer-dialog-theme($theme);
   @include cfar-exercise-dialog-theme($theme);
   @include event-button-theme($theme);
 }
