--- a/projects/cloud-airlines-angular-sdk/src/styles/dialog.scss
+++ b/projects/cloud-airlines-angular-sdk/src/styles/dialog.scss
@@ -2,7 +2,7 @@
 
 ::ng-deep {
     .hopper-dialog-container {
-        max-width: 60% !important;
+        max-width: 640px !important;
 
         @include media-breakpoint('lt-md') {
             max-width: 80% !important;
@@ -14,6 +14,7 @@
     
         .mat-dialog-container {
             padding: 0px !important;
+            border-radius: 0px;
 
             .mat-dialog-content,
             .mat-dialog-actions {
