--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -13,7 +13,7 @@
                     [currentLang]="currentLang"
                     [partnerId]="partnerId"
                     [hCSessionId]="hCSessionId"
-                    [itinerary]="itinerary"
+                    [itineraries]="itineraries"
                     [bookingDateTime]="bookingDateTime"
                     [extAttributes]="extAttributes"
                     (emitSubmit)="onEmitSubmit($event)"
