--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ $light-primary-text: white;
 @import "./app/shared/components/outputs/outputs.component.scss";
 
 // Mixin for easier access
-@mixin hopper-components-theme($theme) {
+@mixin documentation-components-theme($theme) {
   @include guides-page-component-theme($theme);
   @include cfar-offer-banner-page-component-theme($theme);
   @include cfar-offer-dialog-page-component-theme($theme);
@@ -53,7 +53,7 @@ $light-primary-text: white;
 }
 
 // ------------------------------------------
-// HOPPER THEMES
+// THEMES (For documentation)
 // ------------------------------------------
 
 $hopper-primary-palette: (
@@ -122,16 +122,10 @@ $hopper-accent-palette: (
   )
 );
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
 $hopper-primary: mat.define-palette($hopper-primary-palette, 500, 300, 700);
 $hopper-accent: mat.define-palette($hopper-accent-palette, 500, 300, 700);
-// The warn palette is optional (defaults to red).
 $hopper-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $hopper-dark-theme: mat.define-dark-theme((
   color: (
     primary: $hopper-primary,
@@ -153,10 +147,10 @@ $hopper-light-theme: mat.define-light-theme((
   @include mat.all-component-themes($hopper-dark-theme);
 
   // Apply the theme to the library components
-  @include custom-components-theme($hopper-dark-theme);
+  @include hopper-cloud-airlines-angular-sdk-components-theme($hopper-dark-theme);
 
-  // Apply the theme to the project components
-  @include hopper-components-theme($hopper-dark-theme);
+  // Apply the theme to the documentation components
+  @include documentation-components-theme($hopper-dark-theme);
 }
 
 .theme-light-hopper {
@@ -164,102 +158,25 @@ $hopper-light-theme: mat.define-light-theme((
   @include mat.all-component-themes($hopper-light-theme);
 
   // Apply the theme to the library components
-  @include custom-components-theme($hopper-light-theme);
+  @include hopper-cloud-airlines-angular-sdk-components-theme($hopper-light-theme);
 
-  // Apply the theme to the project components
-  @include hopper-components-theme($hopper-light-theme);
+  // Apply the theme to the documentation components
+  @include documentation-components-theme($hopper-light-theme);
 }
 
-// ------------------------------------------
-// BLUE THEME
-// ------------------------------------------
-
-$light-blue-primary-palette: (
-  50: #e0eaef,
-  100: #b3cbd7,
-  200: #80a8bc,
-  300: #4d85a1,
-  400: #266a8c,
-  500: #005078,
-  600: #004970,
-  700: #004065,
-  800: #00375b,
-  900: #002748,
-  A100: #7cb7ff,
-  A200: #499aff,
-  A400: #167eff,
-  A700: #0070fc,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $light-primary-text,
-    400: $light-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $dark-primary-text,
-    A400: $light-primary-text,
-    A700: $light-primary-text,
-  )
-);
-
-$light-blue-accent-palette: (
-  50: #e9eaeb,
-  100: #c9cacc,
-  200: #a5a7aa,
-  300: #808488,
-  400: #65696f,
-  500: #4a4f55,
-  600: #43484e,
-  700: #3a3f44,
-  800: #32363b,
-  900: #22262a,
-  A100: #7ab1fb,
-  A200: #4894fa,
-  A400: #1076ff,
-  A700: #0069f6,
-  contrast: (
-    50: $dark-primary-text,
-    100: $dark-primary-text,
-    200: $dark-primary-text,
-    300: $dark-primary-text,
-    400: $light-primary-text,
-    500: $light-primary-text,
-    600: $light-primary-text,
-    700: $light-primary-text,
-    800: $light-primary-text,
-    900: $light-primary-text,
-    A100: $dark-primary-text,
-    A200: $dark-primary-text,
-    A400: $light-primary-text,
-    A700: $light-primary-text,
-  )
-);
-
-$light-blue-primary: mat.define-palette($light-blue-primary-palette, 500, 300, 700);
-$light-blue-accent: mat.define-palette($light-blue-accent-palette, 500, 300, 700);
-$light-blue-warn: mat.define-palette(mat.$red-palette);
-$light-blue-theme: mat.define-light-theme((
-  color: (
-    primary: $light-blue-primary,
-    accent: $light-blue-accent,
-    warn: $light-blue-warn,
-  )
-));
+// ----------------------------------------------------------
+// OVERRIDEN FOR DOCUMENTATION PURPOSE (Managed by the SDK)
+// ----------------------------------------------------------
 
 .theme-light-blue {
   // Apply the theme to all Angular Material Components
   @include mat.all-component-themes($light-blue-theme);
 
   // Apply the theme to the library components
-  @include custom-components-theme($light-blue-theme);
+  @include hopper-cloud-airlines-angular-sdk-components-theme($light-blue-theme);
 
-  // Apply the theme to the project components
-  @include hopper-components-theme($light-blue-theme);
+  // Apply the theme to the documentation components
+  @include documentation-components-theme($light-blue-theme);
 }
 
 // ------------------------------------------
