--- a/projects/cloud-airlines-angular-sdk/src/styles/theme.scss
+++ b/projects/cloud-airlines-angular-sdk/src/styles/theme.scss
@@ -1,5 +1,3 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
 
 // Import component mixins here to enable theming for them
@@ -9,7 +7,7 @@
 @import "../components/event-button/event-button.component.scss";
 
 // Define a mixin for easier access
-@mixin custom-components-theme($theme) {
+@mixin hopper-cloud-airlines-angular-sdk-components-theme($theme) {
   @include cfar-offer-banner-theme($theme);
   @include cfar-offer-dialog-theme($theme);
   @include cfar-exercise-dialog-theme($theme);
@@ -17,24 +15,15 @@
 }
 
 // ------------------------------------------
-// THEMING
+// LIGHT BLUE THEME
 // ------------------------------------------
 
-$theme-A-primary: mat.define-palette(mat.$amber-palette);
-$theme-A-accent: mat.define-palette(mat.$cyan-palette);
-$theme-A-warn: mat.define-palette(mat.$red-palette);
-$theme-A-theme: mat.define-light-theme((
-  color: (
-    primary: $theme-A-primary,
-    accent: $theme-A-accent,
-    warn: $theme-A-warn,
-  )
-));
+@import "./themes/theme-light-blue.scss";
 
-.hopper-theme-A {
+.theme-light-blue {
   // Apply the theme to all Angular Material Components
-  @include mat.all-component-themes($theme-A-theme);
+  @include mat.all-component-themes($light-blue-theme);
 
-  // Apply the theme to our custom components
-  @include custom-components-theme($theme-A-theme);
+  // Apply the theme to the library components
+  @include hopper-cloud-airlines-angular-sdk-components-theme($light-blue-theme);
 }
