--- a/projects/cloud-airlines-angular-sdk/src/styles/themes/theme-light-blue.scss
+++ b/projects/cloud-airlines-angular-sdk/src/styles/themes/theme-light-blue.scss
@@ -1,5 +1,8 @@
 @use '~@angular/material' as mat;
 
+$dark-primary-text: rgba(black, 0.87);
+$light-primary-text: white;
+
 $light-blue-primary-palette: (
   50: #e0eaef,
   100: #b3cbd7,
