Fix minor bugs and upgrade version

--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -19,7 +19,7 @@
             <div class="p-32" ngClass.lt-md="px-16" fxLayout="row wrap" fxLayoutAlign="start center">
         
                 <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px" class="mb-16">
-                    <mat-icon svgIcon="refundable_ticket" color="primary"></mat-icon>
+                    <mat-icon svgIcon="refundable_ticket" class="custom-icon"></mat-icon>
                     <span class="title">{{ 'CFAR_EXERCISE_DIALOG.SUBTITLE' | translate }}</span>
                 </div>
         
