--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -85,6 +85,12 @@
                     font-weight: bold;
                 }
             }
+
+            .custom-icon {
+                * {
+                    fill: map-get($primary-palette, default);
+                }
+            }
         }
 
         .mat-dialog-actions {
