last changes for v1

--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -173,8 +173,8 @@
         </ng-container>
 
        <ng-container *ngIf="!cfarContract">
-            <div class="p-32" ngClass.lt-md="px-16" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
-                <p>{{ 'CFAR_EXERCISE_DIALOG.NO_CONTRACT' | translate }}</p>
+            <div class="p-32" ngClass.lt-md="p-16" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
+                <span class="error-message p-16">{{ 'CFAR_EXERCISE_DIALOG.NO_CONTRACT' | translate }}</span>
             </div>
        </ng-container>
 
