--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
@@ -1,7 +1,8 @@
 <div class="px-32" ngClass.lt-md="px-16" fxLayout="row" fxLayoutAlign="center center">
 
     <ng-container *ngIf="!isLoading">
-        <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers">
+
+        <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap">
     
             <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="16px">
     
@@ -15,7 +16,7 @@
                         <h2 class="offer-title">{{ 'CFAR_OFFER_BANNER.TITLE' | translate }}</h2>
                     </div>
 
-                    <ng-container *ngFor="let desc of offer?.offerDescription; let i = index;">
+                    <ng-container *ngFor="let desc of cheapestOffer?.offerDescription; let i = index;">
                         <!-- DIRTY FIX : Hide the second description -->
                         <div class="py-16" *ngIf="i != 1" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
                             <mat-icon class="check-icon">check</mat-icon>
@@ -26,7 +27,7 @@
                 </div>
 
                 <div fxFlex="calc(20% - 16px)" fxFlex.lt-md="100" fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.lt-md="end center">
-                    <button mat-raised-button (click)="onSubmit(offer)">
+                    <button mat-raised-button (click)="onSubmit(cheapestOffer)">
                         {{ 'CFAR_OFFER_BANNER.BUTTON.SELECT' | translate }}
                     </button>
                 </div>
@@ -35,9 +36,10 @@
             
         </mat-card>
 
-        <ng-container *ngIf="!cfarOffers || cfarOffers?.length == 0">
+        <ng-container *ngIf="!cheapestOffer">
             <p>{{ 'CFAR_OFFER_BANNER.NO_OFFERS' | translate }}</p>
         </ng-container>
+
     </ng-container>
 
     <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" *ngIf="isLoading">
