--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -11,12 +11,10 @@
                     [isFakeBackend]="isFakeBackend"
                     [basePath]="basePath"
                     [currentLang]="currentLang"
-                    [partnerId]="partnerId"
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
-                    [bookingDateTime]="bookingDateTime"
                     [extAttributes]="extAttributes"
-                    (emitSubmit)="onEmitSubmit($event)"
+                    (offerAccepted)="onOfferAccepted($event)"
                 ></hopper-cfar-offer-banner>
             </div>
         </mat-tab>
