--- a/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="cfar-offer-dialog-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
-    <p fxFlex="100">This layover is triggered once a User has added CFAR to the booking. It gives more information about the CFAR Offer and can enable the User to choose between different coverage options.</p>
+    <p fxFlex="100">This modal can be integrated in your booking funnel in order to display CFAR offers to the User. CFAR offers will be created dynamically, including a description in the page’s language with a price.</p>
 
     <mat-tab-group fxFlex="100" backgroundColor="primary" class="tab-group mb-16">
 
