--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="mat-elevation-z4" color="primary" fxLayout="row" fxLayoutAlign="space-between center">
     <div fxLayout="row" fxLayoutAlign="start center">
-        <span routerLink="/" class="pointer">Hopper Cloud Airlines - Angular SDK</span>
+        <span routerLink="/" class="pointer">Hopper Cloud Airlines - Angular SDK - {{ version }}</span>
     </div>
 
     <div fxLayout="row" fxLayoutAlign="end center">
