--- a/projects/cloud-airlines-angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/cloud-airlines-angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -28,7 +28,7 @@
                     <span>{{ desc }}</span>
                 </div>
 
-                <div fxFlex="100" class="py-8" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+                <div fxFlex="100" class="py-8" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutGap="8px">
                     <span>{{ 'CFAR_OFFER_DIALOG.TERMS_WARNING' | translate }}</span>
                     <a href="#" target="_blank">{{ 'CFAR_OFFER_DIALOG.TERMS_LINK_TEXT' | translate }}</a>
                 </div>
