--- a/projects/cloud-airlines-angular-sdk/src/styles/theme.scss
+++ b/projects/cloud-airlines-angular-sdk/src/styles/theme.scss
@@ -2,6 +2,7 @@
 
 // Import component mixins here to enable theming for them
 @import "../components/cfar-offer-banner/cfar-offer-banner.component.scss";
+@import "../components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss";
 @import "../components/cfar-offer-dialog/cfar-offer-dialog.component.scss";
 @import "../components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss";
 @import "../components/event-button/event-button.component.scss";
@@ -9,6 +10,7 @@
 // Define a mixin for easier access
 @mixin hopper-cloud-airlines-angular-sdk-components-theme($theme) {
   @include cfar-offer-banner-theme($theme);
+  @include cfar-offer-banner-large-theme($theme);
   @include cfar-offer-dialog-theme($theme);
   @include cfar-exercise-dialog-theme($theme);
   @include event-button-theme($theme);
